修改演示demo上传

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             </ul>
         </div>
         <div class ="menu">
-            <a href='/index.html'><div class="item">首页</div></a>
+            <a href='./index.html'><div class="item">首页</div></a>
         </div>
     </div>
     <div class="side">
