修改演示demo上传

--- a/index.html
+++ b/index.html
@@ -307,6 +307,9 @@
             </div>
         </a>
         <div class ="menu">
+            <a href='https://github.com/songliuchen/cesium' target="_blank"><div class="item">下载</div></a>
+        </div>
+        <div class ="menu">
             <div class="item" onclick="showSubMenu(event)"><span>展示方式&nbsp;&nbsp;</span><span class="fa fa-sort-down"></span></div>
             <ul class="sub_menu nav_sub_menu">
                 <li>
