--- a/index_list.html
+++ b/index_list.html
@@ -22,6 +22,8 @@
     <br />
     <a href ="datasource/geojson.html">展示geojson数据</a>
     <br />
-    <a href ="datasource/3dtitles.html">展示3dtities数据</a><span>&nbsp;&nbsp;需要下载3d titles，链接:https://pan.baidu.com/s/1pdctcLOR08ifZnmB69q7AQ  密码:io8z</span>
+    <a href ="3dtiles/load_3dtiles.html">展示3dtities数据</a><span>&nbsp;&nbsp;需要下载3d titles，链接:https://pan.baidu.com/s/1pdctcLOR08ifZnmB69q7AQ  密码:io8z</span>
+    <br />
+    <a href ="3dtiles/load_point_cloud.html">展示点云数据</a>
 </body>
 </html>
