--- a/index_list.html
+++ b/index_list.html
@@ -6,24 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="margin:10px;">
-    <a href ="base/load_cesium.html">加载地图</a>
+    <a href ="base/load_cesium.html">Hello World</a>
     <br />
-    <a href ="base/load_cesium2.html">初始化去除地图所有控件</a>
+    <a href ="base/load_cesium2.html">去除所有控件</a>
     <br />
-    <a href ="base/load_cesium3.html">地图控件动态显示</a>
+    <a href ="base/load_cesium3.html">动态显示隐藏控件</a>
     <br />
-    <a href ="fly/fly.html">三维飞行</a>
-    <br />
-    <a href ="model/show.html">展示基础模型</a>
+    <a href ="model/show.html">模型属性修改</a>
     <br />
     <a href ="model/show_underline.html">展示地下模型</a>
     <br />
-    <a href ="datasource/topojson.html">展示topojson数据</a>
+    <a href ="datasource/geojson.html">Geo JSON</a>
     <br />
-    <a href ="datasource/geojson.html">展示geojson数据</a>
+    <a href ="datasource/topojson.html">Topo JSON</a>
     <br />
-    <a href ="3dtiles/load_3dtiles.html">展示3dtities数据</a><span>&nbsp;&nbsp;需要下载3d titles，链接:https://pan.baidu.com/s/1pdctcLOR08ifZnmB69q7AQ  密码:io8z</span>
+    <a href ="fly/fly.html">飞行</a>
     <br />
-    <a href ="3dtiles/load_point_cloud.html">展示点云数据</a>
+    <span>&nbsp;&nbsp;需要下载3d titles，链接:https://pan.baidu.com/s/1pdctcLOR08ifZnmB69q7AQ  密码:io8z</span>
+    <br />
+    <a href ="3dtiles/load_3dtiles.html">加载黄浦江数据</a>
+    <br />
+    <a href ="3dtiles/load_3dtiles2.html">加载工厂数据</a>
+    <br />
+    <a href ="3dtiles/load_official.html">加载小区数据</a>
+    <br />
+    <a href ="3dtiles/load_point_cloud.html">加载点云数据</a>
+    <br />
+    <a href ="tools/3dtiles_download.py">爬取网络3DTiles数据</a>
 </body>
 </html>
