--- a/3dtiles/load_official.html
+++ b/3dtiles/load_official.html
@@ -25,7 +25,7 @@
             terrainProvider: Cesium.createWorldTerrain()
         });
         mViewer.scene.globe.depthTestAgainstTerrain = false;
-        var tileset = mViewer.scene.primitives.add(new Cesium.Cesium3DTileset({ url: "../data/dianyun/tileset.json" }));
+        var tileset = mViewer.scene.primitives.add(new Cesium.Cesium3DTileset({ url: "../data/official/tileset.json" }));
         tileset.readyPromise.then(function(tileset)
         {
             mViewer.camera.viewBoundingSphere(tileset.boundingSphere, new Cesium.HeadingPitchRange(0, -0.5, 0));
