完善控件汉化功能上传

--- a/index.html
+++ b/index.html
@@ -434,6 +434,20 @@
                     </li>
                 </ul>
             </li>
+            <li class="root_menu">
+                <div class="menu_item" onclick="toggoleSildMenu(event)">
+                    <a href= "#plugins">
+                        <span class="fa fa-plug icon"></span>
+                        <span>插件</span>
+                        <span class="fa fa-angle-down pull-right"></span>
+                    </a>
+                </div>
+                <ul class="sub_container">
+                    <li class="sub_menu" onclick="sildMenuItemClick(event)">
+                        <a href="#plugins-cesium-zh" class ="route"><span>汉化插件</span></a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </div>
 
@@ -569,6 +583,20 @@
                         <a href ="./tools/3dtiles_download.py" target="_blank">
                             <span class="des">爬取网络3DTiles数据</span>
                             <img class="img" src="./assets/thumb/tools-3dtiles_download.png" >
+                        </a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <a name="plugins"> </a>
+                <h3 class="title"><i class="fa fa-plug"></i>&nbsp;&nbsp;插件</h3>
+                <div class ="content">
+                    <div class="sub_title">插件</div>
+                    <a name="plugins-cesium-zh"> </a>
+                    <div class="cart" >
+                        <a href ="./plugins/cesium.zh.js" target="_blank">
+                            <span class="des">汉化插件</span>
+                            <img class="img" src="./assets/thumb/pulgins-cesium-zh.png" >
                         </a>
                     </div>
                 </div>
