完善控件汉化功能上传

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 </div>
                 <ul class="sub_container">
                     <li class="sub_menu" onclick="sildMenuItemClick(event)">
-                        <a href="#plugins-cesium-zh" class ="route"><span>汉化插件</span></a>
+                        <a href="#plugins-cesium_zh" class ="route"><span>汉化插件</span></a>
                     </li>
                 </ul>
             </li>
@@ -592,11 +592,11 @@
                 <h3 class="title"><i class="fa fa-plug"></i>&nbsp;&nbsp;插件</h3>
                 <div class ="content">
                     <div class="sub_title">插件</div>
-                    <a name="plugins-cesium-zh"> </a>
+                    <a name="plugins-cesium_zh"> </a>
                     <div class="cart" >
-                        <a href ="./plugins/cesium.zh.js" target="_blank">
+                        <a href ="./index.html#plugins-cesium_zh?type=1" target="_blank">
                             <span class="des">汉化插件</span>
-                            <img class="img" src="./assets/thumb/pulgins-cesium-zh.png" >
+                            <img class="img" src="./assets/thumb/pulgins-cesium_zh.png" >
                         </a>
                     </div>
                 </div>
